# orbslam2-ros

./: CMakeLists.txt  README.md  package.xml
param/: realsense.yaml
src/: ros_mono.cc  ros_rgbd.cc  ros_stereo.cc
